Added support for Huawei devices
Works on P9 lite, needs testing with other huawei devices

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,10 @@
         <item>1</item>
         <item>0</item>
     </string-array>
+    <string-array name="enable_charger">
+        <item>/sys/class/hw_power/charger/charge_data/enable_charger</item>
+        <item>enable_charger (Huawei)</item>
+        <item>1</item>
+        <item>0</item>
+    </string-array>
 </resources>
